[package]
name = "astrophi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.15"
tokio = { version = "1.27", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gphoto2 = "3.2.0"
thiserror = "1.0"