[package]
name = "astrophi"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/paunstefan/astrophi"
description = "Astrophotography camera control software"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
tokio = { version = "1.27", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "tracing-log", "std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gphoto2 = "3.2"
thiserror = "1.0"
tracing-appender = "0.2"